Added User Registration Page And Login Page

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
    </head>
    <body>
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="user.html">skilledGraft</a>
+          <a class="navbar-brand" href="user.html">CarRental</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -83,7 +83,7 @@
                                 <div class="email">
                                 <h5>Email:</h5>
                                 <ul class="list-unstyled">
-                                    <li> skilledgraft@email.com</li>
+                                    <li> CarRental@email.com</li>
                                     
                                 </ul>
                                 </div>
