--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
    </head>
    <body>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">SkilledGraft</a>
+                <a class="navbar-brand" href="#">CarRental</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -56,7 +56,7 @@
                                 <div class="row">
                                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                                         <div class="page-caption">
-                                            <h1 class="page-title">SkilledGraft</h1>
+                                            <h1 class="page-title">CarRental</h1>
                                         </div>
                                     </div>
                                 </div>
@@ -71,7 +71,7 @@
                                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                                             <!-- section-title -->
                                             <div class="section-title mb-0">
-                                                <h2>SkilledGraft. Now you can book skilled labors from anywhere on the world.</h2>
+                                                <h2>CarRental. Now you can book skilled labors from anywhere on the world.</h2>
                                                 <p class="desc">Bearcat Skilled graft website interface help people to find the skilled labor online exmple plumber,electrician,carpenter, Driver etc. In this site user can see labors avilability, pay rates and their level of expertise(Professional, intermediate,bigginer) .Once user fine with labour skills, they can book appointment with them for needs.The Payment option is very easy.Our website clearly shows the avialability of labors.   </p>
                                             </div>
                                             <!-- /.section-title -->
@@ -116,7 +116,7 @@
                                         </div>
                                         <div class="second-bar">
                                            <div class="container">
-                                                <h2 class="logo"><a href="#"> SkilledGraft </a></h2>
+                                                <h2 class="logo"><a href="#"> CarRental </a></h2>
                                                 <div class="social-icons">
                                                     <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
                                                     <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
