--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <link rel="stylesheet" href="css/Footer-with-logo.css">
       <link rel="stylesheet" href="css/common.css">
       <link rel="stylesheet" href="css/login.css">
-      <link rel="stylesheet" href="css/modal_success.css">     
+      <link rel="stylesheet" href="css/modal_success.css">
    </head>
    <body>
       <!------ Include the above in your HEAD tag ---------->
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-         <a class="navbar-brand" href="#">SkilledGraft</a>
+         <a class="navbar-brand" href="#">CarRentalProject</a>
       </nav>
       <div class="container login-container">
          <div class="row">
@@ -157,20 +157,11 @@
                </div>
                <div class="col-sm-3 info">
                   <h5>Information</h5>
-                  <p>Online SkilledGraft booking helps user to book skilled labours by  through online.</p>
+                  <p>Online Car Rentalbooking helps the  user to book the cars  through online portal.</p>
                </div>
             </div>
          </div>
-         <div class="second-bar">
-            <div class="container">
-               <h2 class="logo"><a href="#"> SkilledGraft</a></h2>
-               <div class="social-icons">
-                  <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                  <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
-               </div>
-            </div>
-         </div>
+         
       </footer>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
