--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
    </head>
    <body>
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">SkilledGraft</a>
+    <a class="navbar-brand" href="#">CarRental</a>
   </nav>
 
 <div class="container">
@@ -24,13 +24,7 @@
 <div class="card bg-light">
 <article class="card-body mx-auto" style="max-width: 400px;">
 	<h4 class="card-title mt-3 text-center">Create Account</h4>
-	<p>
-		<a href="" class="btn btn-block btn-twitter"> <i class="fa fa-twitter"></i>   Login via Twitter</a>
-		<a href="" class="btn btn-block btn-facebook"> <i class="fa fa-facebook"></i>   Login via facebook</a>
-	</p>
-	<p class="divider-text">
-        <span class="bg-light">OR</span>
-    </p>
+
 	<form  class="needs-validation"  novalidate> 
 	<div class="form-group input-group">
 		<div class="input-group-prepend">
