--- a/register.html
+++ b/register.html
@@ -118,50 +118,45 @@
        </div>
     </div>
  </div>
-<footer id="myFooter">
+ <footer id="myFooter">
     <div class="container">
-        <div class="row">
-            <div class="col-sm-3">
-                <h5>Get started</h5>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sign up</a></li>
-                    <li><a href="#">Downloads</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>About us</h5>
-                <ul>
-                    <li><a href="#">Company Information</a></li>
-                    <li><a href="#">Contact us</a></li>
-                    <li><a href="#">Reviews</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
-                <h5>Support</h5>
-                <ul>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Help desk</a></li>
-                    <li><a href="#">Forums</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3 info">
-                <h5>Information</h5>
-                <p>Online skilled labor  booking helps user to book skilled labors by selecting their required silled labor  through online.</p>
-            </div>
-        </div>
+       <div class="row">
+          <div class="col-sm-3">
+             <h5>Get started</h5>
+             <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sign up</a></li>
+                <li><a href="#">Downloads</a></li>
+             </ul>
+          </div>
+          <div class="col-sm-3">
+             <h5>About us</h5>
+             <ul>
+                <li><a href="#">Company Information</a></li>
+                <li><a href="#">Contact us</a></li>
+                <li><a href="#">Reviews</a></li>
+             </ul>
+          </div>
+          <div class="col-sm-3">
+             <h5>Support</h5>
+             <ul>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Help desk</a></li>
+                <li><a href="#">Forums</a></li>
+             </ul>
+
+
+
+             
+          </div>
+          <div class="col-sm-3 info">
+             <h5>Information</h5>
+             <p>Online Car Rentalbooking helps the  user to book the cars  through online portal.</p>
+          </div>
+       </div>
     </div>
-    <div class="second-bar">
-       <div class="container">
-            <h2 class="logo"><a href="#"> SkilledGraft </a></h2>
-            <div class="social-icons">
-                <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
-            </div>
-        </div>
-    </div>
-</footer>
+    
+ </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
