Image Added in Contactus Page

--- a/about.html
+++ b/about.html
@@ -43,10 +43,7 @@
                       <a class="nav-link " href="contact.html">Contact Us</a>
                     </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                  </form>
+                  
                   <a href="index.html"><span class="navbar-text">Signout</span> </a>
                 </div>
               </nav>
@@ -71,8 +68,8 @@
                                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                                             <!-- section-title -->
                                             <div class="section-title mb-0">
-                                                <h2>CarRental. Now you can book skilled labors from anywhere on the world.</h2>
-                                                <p class="desc">Bearcat Skilled graft website interface help people to find the skilled labor online exmple plumber,electrician,carpenter, Driver etc. In this site user can see labors avilability, pay rates and their level of expertise(Professional, intermediate,bigginer) .Once user fine with labour skills, they can book appointment with them for needs.The Payment option is very easy.Our website clearly shows the avialability of labors.   </p>
+                                                <h2>CarRental. Now we can  can book a car.If we are in online</h2>
+                                                <p class="desc">This online site helps us to rent a car .After Purchasing the car you can take it and use it and should return it   </p>
                                             </div>
                                             <!-- /.section-title -->
                                         </div>
