--- a/roomtype.html
+++ b/roomtype.html
@@ -40,10 +40,7 @@
                 <a class="nav-link " href="contact.html">Contact Us</a>
               </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            
             <a href="index.html"><span class="navbar-text">Signout</span> </a>
           </div>
         </nav>
@@ -51,32 +48,41 @@
                 <div class="row">
                         <div class="card-deck">
                                 <div class="card" >
-                                        <img class="card-img-top" src="images/suite.jpg" height="250px" alt="Card image cap">
+                                        <img class="card-img-top" src="images/car1.jpg" height="250px" alt="Card image cap">
                                         <div class="card-body">
-                                          <h5 class="card-title">Suite Room</h5>
-                                          <p class="card-text">Exclusivity and comfort at all times. Enjoy the highest degree of relaxation with the services and facilities in this superior category room. Spacious and bright, overlooking the hotel pool, it provides a bedroom with double bed or two single beds, ideal for precious moments of rest.</p>
-                                          <p class="card-text"><small class="text-muted card_price">Price : 149.99$</small></p>
-                                          <a href="roombooking.html" class="btn btn-primary">Book</a>
+                                          <h5 class="card-title">CheverletCar</h5>
+                                          <p class="card-text">This car gives a good mileage when driving it </p>
+                                          <p class="card-text"><small class="text-muted card_price">Price : 60.99$</small></p>
+                                          <a href="roombooking.html" class="btn btn-primary">BookCar</a>
                                         </div>
                                       </div>
 
                                       <div class="card" >
-                                            <img class="card-img-top" src="images/king.jpg" height="250px" alt="Card image cap">
+                                            <img class="card-img-top" src="images/car2.jpg" height="250px" alt="Card image cap">
                                             <div class="card-body">
-                                              <h5 class="card-title">King Room</h5>
-                                              <p class="card-text">A comfortable bedroom with king-size double bed, a terrace and a bathroom with dressing area and a whirlpool bathtub. Ideal for relaxation.</p>
-                                              <p class="card-text" ><small class="text-muted card_price">Price : 79.99$</small></p>
-                                              <a href="roombooking.html" class="btn btn-primary">Book</a>
+                                              <h5 class="card-title">Benz</h5>
+                                              <p class="card-text">This is a spots type car goes with more speed</p>
+                                              <p class="card-text" ><small class="text-muted card_price">Price : 80.99$</small></p>
+                                              <a href="roombooking.html" class="btn btn-primary">BookCar</a>
                                             </div>
                                           </div>
 
                                           <div class="card" >
-                                                <img class="card-img-top" src="images/queen.jpg" height="250px" alt="Card image cap">
+                                                <img class="card-img-top" src="images/car4.jpg" height="250px" alt="Card image cap">
                                                 <div class="card-body">
-                                                  <h5 class="card-title">Queen Room</h5>
-                                                  <p class="card-text">Standard Queen Room. Standard Queen rooms are medium sized rooms and offer a queen sized bed, en suite shower and WC or en suite shower over bath and WC, 32-inch flat panel TV, free and secure wireless internet, and a desk. These rooms are on the interior of the building.</p>
-                                                  <p class="card-text"><small class="text-muted card_price">Price : 99.99$</small></p>
-                                                  <a href="roombooking.html" class="btn btn-primary">Book</a>
+                                                  <h5 class="card-title">Toyata</h5>
+                                                  <p class="card-text">This is a Family car go for a vacations</p>
+                                                  <p class="card-text"><small class="text-muted card_price">Price : 100.99$</small></p>
+                                                  <a href="roombooking.html" class="btn btn-primary">BookCar</a>
+                                                </div>
+                                              </div>
+                                              <div class="card" >
+                                                <img class="card-img-top" src="images/car5.jpg" height="250px" alt="Card image cap">
+                                                <div class="card-body">
+                                                  <h5 class="card-title">Audi</h5>
+                                                  <p class="card-text">This is a Prestigious car go with friends </p>
+                                                  <p class="card-text"><small class="text-muted card_price">Price : 120.99$</small></p>
+                                                  <a href="roombooking.html" class="btn btn-primary">BookCar</a>
                                                 </div>
                                               </div>
                         </div>  
