Added changes to index, managecars, register and js files

--- a/managerooms.html
+++ b/managerooms.html
@@ -22,7 +22,7 @@
 
         a.btn.btn-primary.reject {
             width: 114px;
-            background: #cc1818;
+            background: #191970;
             border: 1px solid #cc1818;
             margin-bottom: 10px;
         }
