--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
    </head>
    <body>
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">CarRental</a>
+    <a class="navbar-brand" href="#">ReadyforRide</a>
   </nav>
 
 <div class="container">
