--- a/admin.html
+++ b/admin.html
@@ -18,7 +18,7 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
       <script>
           function goToPage(pageName){
-            window.location.href = "https://gangadhar993.github.io/DreamSpot/"+pageName+".html?";
+            window.location.href = "https://dachepally.github.io/Sample01/"+pageName+".html?";
           }
       </script>
    </head>
