--- a/advertise.html
+++ b/advertise.html
@@ -40,10 +40,7 @@
                       <a class="nav-link " href="contact.html">Contact Us</a>
                     </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                  </form>
+                  
                   <a href="index.html"><span class="navbar-text">Signout</span> </a>
                 </div>
               </nav>
@@ -151,7 +148,7 @@
                       
                     <div class="card">
                         <div class="single-service" onclick="goToPage('about')">
-                      <img class="card-img-top" src="images/Carpenter_1.png" height="250px" alt="Card image cap">
+                      <img class="card-img-top" src="images/benzcar.jpeg" height="250px" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Carpenter</h5>
                         <p class="card-text">Carpentry is a skilled trade and a craft in which the primary work performed is the cutting, shaping and installation of building materials during the construction of buildings, ships, timber bridges, concrete formwork, etc.</p>
@@ -160,7 +157,7 @@
                     </div>
                   </div>
                     <div class="card">
-                      <img class="card-img-top" src="images/Electrician_1.png" height="250px" alt="Card image cap">
+                      <img class="card-img-top" src="images/ambasadoor.jpg" height="250px" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Electrician</h5>
                         <p class="card-text">An electrician is a tradesman specializing in electrical wiring of buildings, transmission lines, stationary machines, and related equipment. </p>
@@ -168,7 +165,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img class="card-img-top" src="images/plumber_output.png" height="250px" alt="Card image cap">
+                      <img class="card-img-top" src="images/Scorpia.jpg" height="250px" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Plumber</h5>
                         <p class="card-text">A plumber is tradesperson who specializes in installing and maintaining systems used for potable (drinking) water, sewage and drainage in plumbing systems.</p>
