--- a/user.html
+++ b/user.html
@@ -58,34 +58,27 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="images/lismore-motel.jpg" width="100%" height="500px" alt="First slide">
+                        <img class="d-block w-100" src="images/germancar.jpg" width="100%" height="500px" alt="First slide">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5>Luxury Rooms</h5>
-                          <p>Luxury rooms, with a luxurious double bed and seating area, are popular with business travellers and families. Modern and contemporary, they may accommodate an extra bed or interconnect.</p>
+                          <h5>GermanyCar</h5>
+                          <p>This is a German luxurious car which is used for a Business travelling .</p>
                       </div>
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="images/roomwithbed.jpg" width="100%" height="500px" alt="Second slide">
+                        <img class="d-block w-100" src="images/Scorpia.jpg" width="100%" height="500px" alt="Second slide">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5>Premium Quality Rooms</h5>
-                          <p>A premium room is anything that the hotel deems is better than their standard, whether it is a higher floor, corner room, balcony, refrigerator, larger room, better view, etc. It means the room has more than the standard room. It does NOT mean suite</p>
+                          <h5>Scorpia Car</h5>
+                          <p>This is a Scorpia car used for travelling with friends</p>
                       </div>
                       </div>
                       <div class="carousel-item">
                         <img class="d-block w-100" src="images/Standard-Two-Queen.jpg" width="100%" height="500px" alt="Third slide">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5>Deluxe Rooms</h5>
-                          <p>A single or double room is typically used for 1-2 persons travelling as the bedding configuration is normally one bed. A twin room is for 2 persons travelling however the room normally has 2 beds. A triple room accommodates up to 3 people with either one double and a single bed or a combination of beds and roll-aways.</p>
+                          <h5>Ambasodoor</h5>
+                          <p>An homely Ambasadoor car can have a seating of a 5 people </p>
                       </div>
                       </div>
-                      <div class="carousel-item">
-                        <img class="d-block w-100" src="images/motel94.jpg" width="100%" height="500px" alt="Fourth slide">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Wide range of rooms</h5>
-                          
-                      </div>
-
-                    </div>
+                      
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
