--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                 <a class="nav-link" href="user.html">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="roomtype.html">Labor Booking</a>
+                <a class="nav-link" href="cartype.html">Labor Booking</a>
               </li>
               <li class="nav-item">
                       <a class="nav-link " href="previousbookings.html">Prevoius Bookings</a>
