--- a/payment.html
+++ b/payment.html
@@ -209,7 +209,7 @@ span.price {
                 <a class="nav-link" href="user.html">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="roomtype.html">Labor Booking</a>
+                <a class="nav-link" href="cartype.html">Labor Booking</a>
               </li>
               
               <li class="nav-item">
@@ -301,7 +301,7 @@ span.price {
                 <p class="text-center">Your booking has been confirmed. Check your email for detials.</p>
               </div>
               <div class="modal-footer">
-   <button class="btn btn-success btn-block" data-dismiss="modal" <a href="https://www.w3schools.com/html/" target="_top">Ok</a></button>
+   <button class="btn btn-success btn-block" data-dismiss="modal" Ok ><a href="https://www.w3schools.com/html/" target="_top">Ok Prasad</a></button>
               </div>
             </div>
           </div>
