--- a/previousbookings.html
+++ b/previousbookings.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="user.html">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="roomtype.html">Ride Booking </a>
+                <a class="nav-link" href="cartype.html">Ride Booking </a>
               </li>
               <li class="nav-item active">
                       <a class="nav-link" href="previousbookings.html" >Existing Users<span class="sr-only">(current)</span></a>
