Added Advertisement and car delete and manage card add

--- a/payment.html
+++ b/payment.html
@@ -209,7 +209,7 @@ span.price {
                 <a class="nav-link" href="user.html">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="cartype.html">Labor Booking</a>
+                <a class="nav-link" href="cartype.html">CarBooking</a>
               </li>
               
               <li class="nav-item">
