--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                                 <div class="row">
                                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                                         <div class="page-caption">
-                                            <h1 class="page-title">CarRental</h1>
+                                            <h1 class="page-title">ReadyforRide</h1>
                                         </div>
                                     </div>
                                 </div>
@@ -68,7 +68,7 @@
                                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                                             <!-- section-title -->
                                             <div class="section-title mb-0">
-                                                <h2>CarRental. Now we can  can book a car.If we are in online</h2>
+                                                <h2>ReadyforRide. Now we can  can book a car.If we are in online</h2>
                                                 <p class="desc">This online site helps us to rent a car .After Purchasing the car you can take it and use it and should return it   </p>
                                             </div>
                                             <!-- /.section-title -->
