Added Payment Delete

--- a/manageusers.html
+++ b/manageusers.html
@@ -82,13 +82,13 @@
                                         <div class="gaadiex-list">
                                             <div class="gaadiex-list-item" id="id1"><img class="gaadiex-list-item-img" src="images/icons8-user-60.png" alt="List user">
                                               <div class="gaadiex-list-item-text">
-                                                <h5>Name : Gangadhar Adusumalli</h5>
-                                                <h6>Email : gangadharadusumalli1993@gmail.com</h6>
-                                                <h6>Phone : +16605280325</h6>
+                                                <h5>Name : Durga Prasad</h5>
+                                                <h6>Email : durgaprasad@gmail.com</h6>
+                                                <h6>Phone : +166055280298</h6>
                                                 <div class="date_Section">
-                                                        <h6 class="joined"> Joined Date - 03/10/2019</h6>
+                                                        <h6 class="joined"> Requested</h6>
                                                         <div class="img_Section" onclick="openModal('id1')">
-                                                            <img class="img_item" src="images/delete.png" alt="Delete"/>
+                                                            
                                                             <h6 class="delete">Delete</h6>
                                                         </div>
                                                         
