--- a/user.html
+++ b/user.html
@@ -35,6 +35,9 @@
         <li class="nav-item">
           <a class="nav-link" href="roomtype.html">Booking</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="updateprofile.html">Update Profile</a>
+        </li>
 
         <li class="nav-item ">
           <a class="nav-link " href="about.html">About Us</a>
