Added all files

--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@
                       <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="cartype.html">Labour Booking</a>
+                      <a class="nav-link" href="cartype.html">Bookings</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link " href="previousbookings.html">Prevoius Bookings</a>
+                            <a class="nav-link " href="previousbookings.html">UpdateProfile</a>
                       
                     </li>
                     <li class="nav-item active">
