--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,10 @@
          .container {
             margin-top: 80px;
         }
-
         button.btn.btn-danger {
             background: #191970;
             border: 1px solid #191970;
         }
-
         section#contact {
             padding-bottom: 12px !important;
             background: #f8f9faa6 !important;
@@ -42,10 +40,10 @@
                 <a class="nav-link" href="user.html">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="cartype.html">Labor Booking</a>
+                <a class="nav-link" href="cartype.html">Bookings</a>
               </li>
               <li class="nav-item">
-                      <a class="nav-link " href="previousbookings.html">Prevoius Bookings</a>
+                      <a class="nav-link " href="previousbookings.html">UpdateProfile</a>
                 
               </li>
               <li class="nav-item">
