--- a/updateprofile.html
+++ b/updateprofile.html
@@ -1,11 +1,11 @@
-doctype html>
+<!DOCTYPE html> 
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Home</title>
+  <title>Profile Updated</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
@@ -29,13 +29,13 @@ doctype html>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item ">
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="roomtype.html">Booking</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active ">
           <a class="nav-link" href="updateprofile.html">Update Profile</a>
         </li>
 
@@ -59,6 +59,8 @@ doctype html>
                             
                      
                                 <div class="col-md-12 col-md-offset-1 move">
+                                    <br>
+                                    <br>
                                     <br>
                                         <div class="booking-cta">
                                                 <h2 class="text-center"><span style="color:blue">Update Profile</span></h2>
