--- a/user.html
+++ b/user.html
@@ -63,35 +63,29 @@
           <div class="carousel-item active">
             <img class="d-block w-100" src="images/rentalcar1.jpg" width="100%" height="500px" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Luxury Rooms</h5>
-              <p>Luxury rooms, with a luxurious double bed and seating area, are popular with business travellers and
-                families. Modern and contemporary, they may accommodate an extra bed or interconnect.</p>
+              <h5>Cheverllot</h5>
+              <p>This is a Cheverlot car with having a seating of 5 people</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="images/rentalcar2.jpg" width="100%" height="500px" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Premium Quality Rooms</h5>
-              <p>A premium room is anything that the hotel deems is better than their standard, whether it is a higher
-                floor, corner room, balcony, refrigerator, larger room, better view, etc. It means the room has more
-                than the standard room. It does NOT mean suite</p>
+              <h5>Fortuner</h5>
+              <p>This is an Fortuner .People who are going for the ride with friends can prefer .It has a capacity of 8 members</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="images/rentalcar3.jpg" width="100%" height="500px"
               alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Deluxe Rooms</h5>
-              <p>A single or double room is typically used for 1-2 persons travelling as the bedding configuration is
-                normally one bed. A twin room is for 2 persons travelling however the room normally has 2 beds. A triple
-                room accommodates up to 3 people with either one double and a single bed or a combination of beds and
-                roll-aways.</p>
+              <h5>Innova</h5>
+              <p>This is a Innova car .Seat Capacity -7 people with comfort lugguage mover</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="images/rentalcar4.jpg" width="100%" height="500px" alt="Fourth slide">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Wide range of rooms</h5>
+              <h5>Jeep</h5>
 
             </div>
 
