User type has changed

--- a/cartype.html
+++ b/cartype.html
@@ -60,7 +60,7 @@
                                           <h5 class="card-title">CheverletCar</h5>
                                           <p class="card-text">This car is ood for long trips with good mileage </p>
                                           <p class="card-text"><small class="text-muted card_price">Price : 60.99$</small></p>
-                                          <a href="roombooking.html" class="btn btn-primary">BookCar</a>
+                                          <a href="payment.html" class="btn btn-primary">BookCar</a>
                                         </div>
                                       </div>
 
@@ -70,7 +70,7 @@
                                               <h5 class="card-title">Benz</h5>
                                               <p class="card-text">This is a spots type car goes with more speed</p>
                                               <p class="card-text" ><small class="text-muted card_price">Price : 80.99$</small></p>
-                                              <a href="roombooking.html" class="btn btn-primary">BookCar</a>
+                                              <a href="payment.html" class="btn btn-primary">BookCar</a>
                                             </div>
                                           </div>
 
@@ -80,7 +80,7 @@
                                                   <h5 class="card-title">Toyata</h5>
                                                   <p class="card-text">This is a Family car to go for vacations</p>
                                                   <p class="card-text"><small class="text-muted card_price">Price : 100.99$</small></p>
-                                                  <a href="roombooking.html" class="btn btn-primary">BookCar</a>
+                                                  <a href="payment.html" class="btn btn-primary">BookCar</a>
                                                 </div>
                                               </div>
                                               <div class="card" >
@@ -89,7 +89,7 @@
                                                   <h5 class="card-title">Audi</h5>
                                                   <p class="card-text">This is a Prestigious car go with friends </p>
                                                   <p class="card-text"><small class="text-muted card_price">Price : 120.99$</small></p>
-                                                  <a href="roombooking.html" class="btn btn-primary">BookCar</a>
+                                                  <a href="payment.html" class="btn btn-primary">BookCar</a>
                                                 </div>
                                               </div>
                         </div>  
