--- a/user.html
+++ b/user.html
@@ -33,7 +33,7 @@
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="roomtype.html">Booking</a>
+          <a class="nav-link" href="cartype.html">Booking</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="updateprofile.html">Update Profile</a>
