Add Ready For Ride

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                       <a class="nav-link" href="cartype.html">Bookings</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link " href="previousbookings.html">UpdateProfile</a>
+                            <a class="nav-link " href="updateprofile.html">UpdateProfile</a>
                       
                     </li>
                     <li class="nav-item active">
