--- a/admin.html
+++ b/admin.html
@@ -24,7 +24,7 @@
    </head>
    <body>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="admin.html">CarRental</a>
+                <a class="navbar-brand" href="admin.html">Ready For Ride</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -38,14 +38,14 @@
                       <a class="nav-link" href="manageusers.html">Manage Users</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="manageusers.html">Manage Payments</a>
+                        <a class="nav-link" href="paymentdelete.html">Manage Payments</a>
                       </li>
                     <li class="nav-item">
-                            <a class="nav-link " href="managebookings.html">Manage Cars</a>
+                            <a class="nav-link " href="addcaradmin.html">Manage Cars</a>
                       
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link " href="managerooms.html">Manage Advertisement</a>
+                      <a class="nav-link " href="advertisement.html">Manage Advertisement</a>
                     </li>
                   </ul>
                   
