--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
    </head>
    <body>
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="user.html">CarRental</a>
+          <a class="navbar-brand" href="user.html">Ready For Ride</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -69,7 +69,7 @@
                                     
                                 <h5>Address:</h5>
                                 <ul class="list-unstyled">
-                                    <li> CarRentalProject</li>
+                                    <li> Ready For RideProject</li>
                                     <li>1121 N college Drive</li>
                                     <li> Maryville, MO - 64468</li>
                                 </ul>
@@ -78,7 +78,7 @@
                                 <div class="email">
                                 <h5>Email:</h5>
                                 <ul class="list-unstyled">
-                                    <li> CarRental@email.com</li>
+                                    <li> Ready For Ride@email.com</li>
                                     
                                 </ul>
                                 </div>
