--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <body>
       <!------ Include the above in your HEAD tag ---------->
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-         <a class="navbar-brand" href="#">ReadyforRide</a>
+         <a class="navbar-brand" href="#">Ready For Ride</a>
       </nav>
       <div class="container login-container">
          <div class="row">
