--- a/cartype.html
+++ b/cartype.html
@@ -21,7 +21,7 @@
 
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">CarRental</a>
+    <a class="navbar-brand" href="#">Ready For Ride</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -30,10 +30,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item ">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="user.html">Home</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="roomtype.html">Booking</a>
+          <a class="nav-link" href="cartype.html">Booking</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link" href="updateprofile.html">Update Profile</a>
