--- a/manageusers.html
+++ b/manageusers.html
@@ -41,7 +41,7 @@
    </head>
    <body>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="admin.html">CarRental</a>
+                <a class="navbar-brand" href="admin.html">Ready For Ride</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -49,7 +49,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item ">
-                      <a class="nav-link" href="#">Home </a>
+                      <a class="nav-link" href="admin.html">Home </a>
                     </li>
                     <li class="nav-item active">
                       <a class="nav-link" href="manageusers.html">Manage Users</a>
