--- a/payment.html
+++ b/payment.html
@@ -198,7 +198,7 @@ span.price {
 <body>
 
  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="user.html">CarRental</a>
+          <a class="navbar-brand" href="user.html">Ready For Ride</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
