--- a/user.html
+++ b/user.html
@@ -21,7 +21,7 @@
 
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">CarRental</a>
+    <a class="navbar-brand" href="#">Ready For Ride</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
