--- a/calendar.html
+++ b/calendar.html
@@ -92,7 +92,7 @@
      <div class="form-group">
       <div class="col-sm-10 col-sm-offset-2">
        <input name="_honey" style="display:none" type="text"/>
-       <button class="btn btn-primary " name="submit" type="submit">
+       <button class="btn btn-primary " onclick="myFunction()" name="submit" type="submit">
         Submit
        </button>
       </div>
@@ -123,6 +123,11 @@
 			autoclose: true,
 		})
 	})
+</script>
+<script>
+  function myFunction() {
+  window.open("cartype.html");
+}
 </script>
 
 </body>
