--- a/addcaradmin.html
+++ b/addcaradmin.html
@@ -76,9 +76,9 @@
           <br>
           <br>
           <h1><center>MANAGECARS</center></h2>
-          <a href="#" class="btn btn-primary btn-lg btn-block" role="button">ADDCAR</a>
-          <a href="#" class="btn btn-primary btn-lg btn-block" role="button">DELETECAR</a>
-          <a href="#" class="btn btn-primary btn-lg btn-block" role="button">UPDATE CAR INFO</a>
+          <a href="caradding.html" class="btn btn-primary btn-lg btn-block" role="button">ADDCAR</a>
+          <a href="cardeleting.html" class="btn btn-primary btn-lg btn-block" role="button">DELETECAR</a>
+          <!-- <a href="#" class="btn btn-primary btn-lg btn-block" role="button">UPDATE CAR INFO</a> -->
           </div>
           <footer id="myFooter">
               <div class="container">
