--- a/welcome.html
+++ b/welcome.html
@@ -49,7 +49,7 @@ hr {
     <p>Welcome to Ready To Ride</p>
   </div>
   <div class="middle">
-    <h1><a href="index.html">Click Here To Booking</a></h1>
+    <h1><a href="calendar.html">Click Here To Booking</a></h1>
     <hr>
     <p>35 days left</p>
   </div>
