--- a/caradding.html
+++ b/caradding.html
@@ -61,7 +61,7 @@
                                           <h5 class="card-title">CheverletCar</h5>
                                           <p class="card-text">This car is good for long trips with good mileage </p>
                                           <p class="card-text"><small class="text-muted card_price">Price : 60.99$</small></p>
-                                          <button onclick="myFunction()">ADD CAR</button>
+                                          <input id="input-button"  class="btn btn-primary" onclick="myFunction()" type="submit" value="Add Car"/>
                                         </div>
                                       </div>
 
