--- a/addcaradmin.html
+++ b/addcaradmin.html
@@ -55,7 +55,7 @@
                       <a class="nav-link" href="manageusers.html">Manage Users</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="paymentdelete.html">Manage Payments <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="managebookings.html">Manage Payments <span class="sr-only">(current)</span></a>
                       </li>
                     <li class="nav-item active">
                             <a class="nav-link " href="addcaradmin.html">Manage Cars <span class="sr-only">(current)</span></a>
