--- a/admin.html
+++ b/admin.html
@@ -38,7 +38,7 @@
                       <a class="nav-link" href="manageusers.html">Manage Users</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="paymentdelete.html">Manage Payments</a>
+                        <a class="nav-link" href="managebookings.html">Manage Payments</a>
                       </li>
                     <li class="nav-item">
                             <a class="nav-link " href="addcaradmin.html">Manage Cars</a>
