--- a/advertisement.html
+++ b/advertisement.html
@@ -55,7 +55,7 @@
                       <a class="nav-link" href="manageusers.html">Manage Users</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="paymentdelete.html">Manage Payments </a>
+                        <a class="nav-link" href="managebookings.html">Manage Payments </a>
                       </li>
                     <li class="nav-item">
                             <a class="nav-link " href="managebookings.html">Manage Cars <span class="sr-only">(current)</span></a>
@@ -96,7 +96,7 @@
                 </a>
               </div>
             </div>
-          <button type="button" class="btn btn-primary">ADD ADVERTISEMENT</button>
+          <button type="button"  onclick="myFunction()" class="btn btn-primary">ADD ADVERTISEMENT</button>
 </div>
 
 <footer id="myFooter">
@@ -138,5 +138,10 @@
     </div>
     
  </footer>
+  <script>
+                function myFunction() {
+  alert("Advertisement Has Been  Added Successfully");
+}
+ </script>
          </body>
   </html>
