--- a/cardeleting.html
+++ b/cardeleting.html
@@ -60,7 +60,7 @@
                                           <h5 class="card-title">CheverletCar</h5>
                                           <p class="card-text">This car is ood for long trips with good mileage </p>
                                           <p class="card-text"><small class="text-muted card_price">Price : 60.99$</small></p>
-                                          <button onclick="myFunction()">Delete CAR</button>
+                                          <input id="input-button"  class="btn btn-primary" onclick="myFunction()" type="submit" value="Delete Car"/>
                                         </div>
                                       </div>
 
