--- a/manageusers.html
+++ b/manageusers.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="manageusers.html">Manage Users</a>
             </li>
           <li class="nav-item ">
-            <a class="nav-link" href="paymentdelete.html">Manage Payments <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="managebookings.html">Manage Payments <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item ">
                   <a class="nav-link " href="addcaradmin.html"> Manage Cars</a>
