--- a/caradding.html
+++ b/caradding.html
@@ -48,7 +48,7 @@
       </ul> -->
       </ul>
       
-      <a href="index.html"><span class="navbar-text">Signout</span> </a>
+      <a href="user.html"><span class="navbar-text">Signout</span> </a>
     </div>
   </nav>
   
