--- a/contact.html
+++ b/contact.html
@@ -42,14 +42,14 @@
               <li class="nav-item">
                 <a class="nav-link" href="user.html">Home </a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                   <a class="nav-link " href="cartype.html">Bookings</a>
             
           </li>
               <li class="nav-item">
                 <a class="nav-link " href="updateProfile.html">Update Profile</a>
           
-        </li>
+        </li> -->
         <li class="nav-item">
             <a class="nav-link " href="about.html">About Us</a>
           </li>
@@ -63,7 +63,7 @@
               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form> -->
-            <a href="index.html"><span class="navbar-text">Signout</span> </a>
+            <!-- <a href="index.html"><span class="navbar-text">Signout</span> </a> -->
           </div>
         </nav>
               <section class="contact py-5 bg-light" id="contact">
