--- a/home.html
+++ b/home.html
@@ -12,12 +12,15 @@
       <link rel="stylesheet" href="css/common.css">
       <link rel="stylesheet" href="css/login.css">
       <link rel="stylesheet" href="css/modal_success.css">
+      <script>src="js/register.js"</script>
    </head>
    <body>
       <!------ Include the above in your HEAD tag ---------->
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-         <a class="navbar-brand" href="#">Ready For Ride</a>
+         <a class="navbar-brand" href="user.html">Ready For Ride</a>
+         <a class="navbar-brand" href="user.html">Home</a>
       </nav>
+      
       <div class="container login-container">
          <div class="row">
             <div class="col-md-12">
