--- a/register.html
+++ b/register.html
@@ -94,7 +94,7 @@
     <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block"> Register  </button>
     </div> <!-- form-group// -->      
-    <p class="text-center">Have an account? <a href="index.html">Log In</a> </p>                                                                 
+    <p class="text-center">Have an account? <a href="home.html">Log In</a> </p>                                                                 
 </form>
 </article>
 </div> <!-- card.// -->
