--- a/user.html
+++ b/user.html
@@ -32,12 +32,12 @@
         <li class="nav-item active">
           <a class="nav-link" href="#">Home</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="cartype.html">Booking</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="updateprofile.html">Update Profile</a>
-        </li>
+        </li> -->
 
         <li class="nav-item ">
           <a class="nav-link " href="about.html">About Us</a>
@@ -46,8 +46,8 @@
           <a class="nav-link " href="contact.html">Contact Us</a>
         </li>
       </ul>
-      
-      <a href="index.html"><span class="navbar-text">Signout</span> </a>
+      <a href="home.html"><span class="navbar-text">Login/Signup</span> </a>
+      <a href="adminsign.html"><span class="navbar-text">AdminLogin </span> </a>
     </div>
   </nav>
   <div class="container-fluid">
@@ -63,7 +63,7 @@
           <div class="carousel-item active">
             <img class="d-block w-100" src="images/rentalcar1.jpg" width="100%" height="500px" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Cheverllot</h5>
+              <h5>Cheverlot</h5>
               <p>This is a Cheverlot car with having a seating of 5 people</p>
             </div>
           </div>
