--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
    </head>
    <body>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">ReadyforRide</a>
+                <a class="navbar-brand" href="#">Ready For Ride</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -27,15 +27,15 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Home</a>
+                      <a class="nav-link" href="user.html">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                       <a class="nav-link" href="cartype.html">Bookings</a>
                     </li>
                     <li class="nav-item">
                             <a class="nav-link " href="updateprofile.html">UpdateProfile</a>
                       
-                    </li>
+                    </li> -->
                     <li class="nav-item active">
                       <a class="nav-link " href="about.html">About Us<span class="sr-only">(current)</span></a>
                     </li>
@@ -44,7 +44,7 @@
                     </li>
                   </ul>
                   
-                  <a href="index.html"><span class="navbar-text">Signout</span> </a>
+                  <!-- <a href="home.html"><span class="navbar-text">Signout</span> </a> -->
                 </div>
               </nav>
               <div class="container-fluid">
