--- a/advertisement.html
+++ b/advertisement.html
@@ -66,7 +66,7 @@
                     </li>
                   </ul>
                   
-                  <a href="index.html"><span class="navbar-text">Signout</span> </a>
+                  <a href="user.html"><span class="navbar-text">Signout</span> </a>
                 </div>
               </nav>
 
