--- a/calendar.html
+++ b/calendar.html
@@ -40,9 +40,9 @@
               <a class="nav-link " href="contact.html">Contact Us</a>
             </li>
           </ul>
-          <a href="home.html"><span class="navbar-text">Login</span> </a>
-          <a href="adminsign.html"><span class="navbar-text">AdminLogin</span> </a>
-          <a href="index.html"><span class="navbar-text">Signout</span> </a>
+          <!-- <a href="home.html"><span class="navbar-text">Login</span> </a>
+          <a href="adminsign.html"><span class="navbar-text">AdminLogin</span> </a> -->
+          <a href="user.html"><span class="navbar-text">Signout</span> </a>
         </div>
       </nav>
       <br>
