--- a/cartype.html
+++ b/cartype.html
@@ -47,7 +47,7 @@
         </li>
       </ul>
       
-      <a href="index.html"><span class="navbar-text">Signout</span> </a>
+      <a href="user.html"><span class="navbar-text">Signout</span> </a>
     </div>
   </nav>
   
