--- a/managebookings.html
+++ b/managebookings.html
@@ -52,7 +52,7 @@
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form> -->
-        <a href="index.html"><span class="navbar-text">Signout</span> </a>
+        <a href="user.html"><span class="navbar-text">Signout</span> </a>
       </div>
     </nav>
               <div class="container-fluid">
