--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
       <!------ Include the above in your HEAD tag ---------->
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
          <a class="navbar-brand" href="user.html">Ready For Ride</a>
-         <a class="navbar-brand" href="user.html">Home</a>
+         <a class="navbar-brand active" href="user.html">Home</a>
       </nav>
       
       <div class="container login-container">
