--- a/payment.html
+++ b/payment.html
@@ -168,7 +168,7 @@
                          
                       </div>
                       <div class="modal-footer">
-                         <button class="btn btn-success btn-block" data-dismiss="modal">OK</button>
+                         <button class="btn btn-success btn-block" data-dismiss="modal" onclick="window.location.href='thankyou.html'">OK</button>
                       </div>
                    </div>
                 </div>
@@ -178,7 +178,7 @@
                             
                         <div class="second-bar">
                            <div class="container">
-                                <h2 class="logo"><a href="#">Foodlers </a></h2>
+                                <h2 class="logo"><a href="#">Ready For Ride </a></h2>
                                 <div class="social-icons">
                                     <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
                                     <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
