--- a/calendar.html
+++ b/calendar.html
@@ -32,7 +32,9 @@
             <li class="nav-item ">
               <a class="nav-link" href="user.html">Home</a>
             </li>
-    
+            <li class="nav-item ">
+              <a class="nav-link" href="updateprofile.html">Update Profile</a>
+            </li>
             <li class="nav-item ">
               <a class="nav-link " href="about.html">About Us</a>
             </li>
