--- a/caradding.html
+++ b/caradding.html
@@ -29,8 +29,19 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+        
+        <li class="nav-item">
+          <a class="nav-link" href="manageusers.html">Manage Users</a>
+        </li>
         <li class="nav-item ">
-          <a class="nav-link" href="user.html">Home</a>
+            <a class="nav-link" href="managebookings.html">Manage Payments </a>
+          </li>
+        <li class="nav-item active">
+                <a class="nav-link " href="addcaradmin.html">Manage Cars <span class="sr-only">(current)</span></a>
+          
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link " href="advertisement.html">Manage Advertisement</a>
         </li>
         <!-- <li class="nav-item">
           <a class="nav-link" href="manageusers.html">Manage Users</a>
