--- a/cardeleting.html
+++ b/cardeleting.html
@@ -29,23 +29,20 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item ">
-          <a class="nav-link" href="user.html">Home</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="cartype.html">Booking</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="updateprofile.html">Update Profile</a>
-        </li>
-
-        <li class="nav-item ">
-          <a class="nav-link " href="about.html">About Us</a>
-        </li>
         <li class="nav-item">
-          <a class="nav-link " href="contact.html">Contact Us</a>
+          <a class="nav-link" href="manageusers.html">Manage Users</a>
         </li>
-      </ul>
+        <li class="nav-item ">
+            <a class="nav-link" href="managebookings.html">Manage Payments </a>
+          </li>
+        <li class="nav-item active">
+                <a class="nav-link " href="addcaradmin.html">Manage Cars <span class="sr-only">(current)</span></a>
+          
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link " href="advertisement.html">Manage Advertisement</a>
+        </li>
+        </ul>
       
       <a href="user.html"><span class="navbar-text">Signout</span> </a>
     </div>
