--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
    </head>
    <body>
       <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="user.html">Ready To Ride
+          <a class="navbar-brand" href="user.html">Ready For Ride
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
