--- a/managebookings.html
+++ b/managebookings.html
@@ -24,7 +24,7 @@
    </head>
    <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="admin.html">Ride For Rental</a>
+      <a class="navbar-brand" href="admin.html">Ready For Ride</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
